# golem-llm

llm/anthropic/src/: conversions.rs
llm/grok/src/: conversions.rs
llm/llm/src/event_source/: ndjson_stream.rs  stream.rs
llm/ollama/src/: client.rs  conversions.rs
llm/openai/src/: client.rs  conversions.rs  lib.rs
llm/openrouter/src/: conversions.rs
test/components-rust/test-helper/src/: lib.rs
test/components-rust/test-llm/: Cargo.toml
test/components-rust/test-llm/src/: lib.rs
test/components-rust/test-llm/wit/: test-llm.wit
